* updating fluxbox theme

--- a/fluxbox-frugalware/styles/Frugalware/theme.cfg
+++ b/fluxbox-frugalware/styles/Frugalware/theme.cfg
@@ -1,156 +1,206 @@
+############################################################
+#  This work is licensed under the Creative Commons        #
+#  Attribution-NonCommercial-ShareAlike 2.5 License.       #
+#  To view a copy of this license, visit                   #
+#  http://creativecommons.org/licenses/by-sa/2.5/          #
+#  or send a letter to Creative Commons,                   #
+#  559 Nathan Abbott Way, Stanford, California 94305, USA. #
+############################################################
 
-#################################################################
-style.name:		deviant					#
-style.author:		PhrAok					#
-style.date:		02/11/2007				#
-style.credits:		lyrae for the base theme BlackWhite 	#
-style.comment: 							#
-#################################################################
 
-         
-#################################################################
-#			TOOLBAR					#
-#################################################################
-toolbar:				flat
-toolbar.color:				#222222
-toolbar.textColor:			#ffffff
-toolbar.justify:			center
-toolbar.height:				20
-toolbar.borderWidth:			0
-toolbar.borderColor:			#ffffff
 
-toolbar.workspace:			flat
-toolbar.workspace.color:		#222222
-toolbar.workspace.textColor:		#afc81c
+############################################################
+style.name:			PerkElementary
+style.author:			Suovainaja
+style.date:			May 31, 2010
+style.credits:			Modified from Shiki for Linux Mint Fluxbox CE
+#  
+############################################################
 
-toolbar.iconbar.empty:			flat
-toolbar.iconbar.empty.color:		#222222
-toolbar.iconbar.focused:		flat
-toolbar.iconbar.focused.pixmap:		bar.xpm
+############################################################
+#	FONTS
+
+menu.title.font:	 	DejaVu Sans Condensed-9:bold
+*font:				DejaVu Sans Condensed-8
+
+############################################################
+
+############################################################
+#	MENU
+
+menu.roundCorners:		TopRight TopLeft
+menu.title.justify:		center
+menu.title.color:		#d6d6d6
+menu.title.textColor:		#3c3b37
+menu.titleHeight:		18
+
+menu.frame:			flat
+menu.frame.justify:		left
+menu.frame.color:		#d6d6d6
+menu.frame.textColor:		#444444
+menu.frame.disableColor:	#9b9b9b
+
+menu.hilite:			flat
+menu.hilite.color:		#333333
+menu.hilite.pixmap:		menu-hilight.xpm
+menu.hilite.textColor:		#ffffff
+
+menu.bevelWidth:		3
+menu.itemHeight:		23
+menu.borderColor:		#444444
+menu.borderWidth:		0
+menu.bullet:			triangle
+menu.bullet.position:		Right
+
+############################################################
+
+############################################################
+#	TOOLBAR
+
+#general settings
+
+toolbar.borderWidth:		0
+toolbar.borderColor: 		#d6d6d6
+
+toolbar.shaped: 		true
+toolbar.alpha: 			255
+toolbar.height: 		21
+
+#The clock area
+
+toolbar.clock.textColor: 	#d6d6d6
+toolbar.clock.justify: 		center
+
+toolbar.clock: 			flat
+toolbar.clock.pixmap: 		focused.xpm
+
+#The workspace title area
+
+toolbar.workspace.textColor: 	#d6d6d6
+toolbar.workspace.justify: 	center
+
+toolbar.workspace: flat
+toolbar.workspace.pixmap: 	focused.xpm
+
+#The iconbar
+
+toolbar.iconbar.empty: 		flat
+toolbar.iconbar.empty.pixmap: 	toolbar.xpm
+
+#Focused window icon
+
 toolbar.iconbar.focused.textColor:	#ffffff
 toolbar.iconbar.focused.justify:	center
-toolbar.iconbar.unfocused:		flat
-toolbar.iconbar.unfocused.color:	#222222
-toolbar.iconbar.unfocused.textColor:	#c3c3c3
-toolbar.iconbar.unfocused.justify:	center
+toolbar.iconbar.focused: 		flat
+toolbar.iconbar.focused.pixmap: 	focused.xpm
 
-toolbar.clock:				flat
-toolbar.clock.color:			#222222
-toolbar.clock.textColor:		#afc81c
+#Unfocused window icon
 
-toolbar.button:				flat
-toolbar.button.color:			#222222
-toolbar.button.picColor:		#222222
+toolbar.iconbar.unfocused.textColor: 	#444444
+toolbar.iconbar.unfocused.justify: 	center
+toolbar.iconbar.unfocused: 		flat
+toolbar.iconbar.unfocused.pixmap: 	toolbar.xpm
 
-toolbar.iconbar.focused.font.effect:	shadow
-toolbar.iconbar.focused.font.shadow.color:	#000000
+#The toolbar buttons for prevworkspace, nextworkspace, prevwindow and next window
 
+toolbar.button.picColor: #e6e6e6
+toolbar.button.pressed.picColor: 	#ffffff
 
-#################################################################
-#			MENU					#
-#################################################################
-menu.title:			flat
-menu.title.color:			#afc81c
-menu.title.justify:			center
-menu.title.textColor:			#ffffff
-menu.title.font: 			Sans-1
-menu.title.font.effect:			shadow
-menu.title.font.shadow.color:		#c8c8c8
+############################################################
 
-menu.frame:				flat
-menu.frame.justify:			left
-menu.frame.color:			#ffffff
-menu.frame.textColor:			#222222
-menu.frame.disableColor:		#aaaaaa
+############################################################
+#	WINDOWS
 
-menu.hilite:				flat
-menu.hilite.color:			#222222
-menu.hilite.textColor:			#ffffff
-menu.hilite.submenu.pixmap:		bullet_selected.xpm
+#general
 
-menu.itemHeight:			13
-menu.bevelWidth:			0
-menu.titleHeight:			3
+window.justify: 		center
+window.roundCorners: 		TopRight TopLeft
+window.bevelWidth:		0
+window.borderWidth: 		1
+window.borderColor:		#d6d6d6
 
-menu.borderColor:			#ffffff
-menu.borderWidth:			1
+#focused and unfocused window
+#titlebar
 
-menu.bullet:				empty
-menu.bullet.position:			Right
-menu.submenu.pixmap:			bullet.xpm
+#the "background" of the window title. This is layered under window.label - see the note in part one
 
+window.title.height:		24
 
-#################################################################
-#			WINDOW					#
-#################################################################
-window.title.focus.pixmap:		window_active.xpm
-window.title.unfocus.pixmap:		window_inactive.xpm
-window.title.height:			20
+#label
+#the text background. This is layered over window.title - see the note in part one
 
-window.justify:				left
+window.label.focus.pixmap: 	window.xpm
+window.label.focus.textColor: 	#444444
 
-window.label.focus.color:		#222222
-window.label.focus.textColor:		#ffffff
+window.label.unfocus.pixmap: 	window.xpm
+window.label.unfocus.textColor:	#888888
 
-window.label.unfocus.pixmap:		window_inactive.xpm
-window.label.focus.pixmap:		window_active.xpm
+#handle
 
-window.label.unfocus.color:             #222222
-window.label.unfocus.textColor:		#c3c3c3
+#the bar along the bottom of the window for resizing vertically
 
-window.font.effect:			shadow
-window.font.shadow.color:		#000000
+window.handleWidth: 		1
+window.handle.focus: 		flat
+window.handle.focus.color: 	#d6d6d6
+window.handle.unfocus: 		flat
+window.handle.unfocus.color: 	#d6d6d6
 
-window.close.pixmap:			close.xpm
-window.close.unfocus.pixmap:		close_unfocus.xpm
-window.close.pressed.pixmap:		close.xpm
+#grips
+#either side of the handle for resizing in horizontally and vertically
 
-window.iconify.pixmap:			min.xpm
-window.iconify.unfocus.pixmap:		min_unfocus.xpm
-window.iconify.pressed.pixmap:		min.xpm
+window.grip.focus: 		flat
+window.grip.focus.color: 	#d6d6d6
+window.grip.unfocus: 		flat
+window.grip.unfocus.color: 	#d6d6d6
 
-window.maximize.pixmap:			max.xpm
-window.maximize.unfocus.pixmap:		max_unfocus.xpm
-window.maximize.pressed.pixmap:		max.xpm
+#button
 
-window.stick.pixmap:			stick.xpm
-window.stick.unfocus.pixmap:		stick_unfocus.xpm		
-window.stick.pressed.pixmap:		stick.xpm
+#sets the background for the window buttons - not visible if window buttons (below) are used
 
-#window.stuck.pixmap:			bar.xpm
-#window.stuck.unfocus.pixmap:		bar.xpm
+#close, max and min, shade, stick and stuck
+#close
 
-window.handle.focus:			flat
-window.handle.focus.color:		#afc81c
-window.handle.unfocus:			flat
-window.handle.unfocus.color:		#222222
+window.close.pixmap: 		close.xpm
+window.close.unfocus.pixmap: 	close-unfocused.xpm
+window.close.pressed.pixmap: 	close-pressed.xpm
 
-window.grip.focus:			flat
-window.grip.focus.color:		#ffffff
-window.grip.unfocus:			flat
-window.grip.unfocus.color:		#ffffff
+#max
 
-window.bevelWidth:			0
-window.shade:				true
+window.maximize.pixmap: 	max.xpm
+window.maximize.unfocus.pixmap: max-unfocused.xpm
+window.maximize.pressed.pixmap: max-pressed.xpm
 
-window.borderWidth:			0
-window.borderColor:			#ffffff
+#icon
 
+window.iconify.pixmap: 		min.xpm
+window.iconify.unfocus.pixmap: 	min-unfocused.xpm
+window.iconify.pressed.pixmap: 	min-pressed.xpm
 
-#################################################################
-#								#
-#################################################################
-handleWidth:        			2
-frameWidth:         			0
-bevelWidth:         			0
-borderWidth:        			0
-borderColor:	   			#222222
-*font:   			Sans-7:bold
+#stick
 
-#menu.roundCorners: topleft topright bottomleft bottomright
-#toolbar.roundCorners: topleft topright bottomleft bottomrondie
-#window.roundCorners: topleft topright bottomleft bottomrondie 
+window.stick.pixmap: 		stick.xpm
+window.stick.unfocus.pixmap: 	stick-unfocused.xpm
+window.stick.pressed.pixmap: 	stick-pressed.xpm
+stuck
 
-#################################################################
-#			END  					#
-#################################################################
+window.stuck.pixmap: 		stick-pressed.xpm
+window.stuck.unfocus.pixmap: 	stick-pressed.xpm
+
+window.frame.focusColor		#3c3b37
+window.frame.unfocusColor	#3c3b37
+
+############################################################
+
+############################################################
+#	TABS
+
+window.tab.justify			center
+window.tab.label.unfocus.pixmap		window.xpm
+window.tab.label.unfocus.textColor	#9b9b9b
+window.tab.label.focus.pixmap		window.xpm
+window.tab.label.focus.textColor	#e6e6e6
+window.tab.borderWidth			1
+window.tab.borderColor			#9b9b9b
+
+############################################################
+
