* initial import of plymouth-theme-frugalware

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ lock-dialog-frugalware			Theme for Gnome lock dialog screensaver
 logo					Frugalware logo + variants
 lxde-frugalware				LXDE Artwork
 pekwm-themes				Themes for Pekwm
+plymouth-theme-frugalware		Plymouth theme for Frugalware
 sawfish-themes				Themes for Sawfish
 slim-theme				Frugalware theme for Slim
 splashy-theme				Theme for Splashy
