--- a/gnome-frugalware/theme/Frugalware/gtk-3.0/settings.ini
+++ b/gnome-frugalware/theme/Frugalware/gtk-3.0/settings.ini
@@ -1,9 +1,4 @@
 [Settings]
-gtk_color_scheme	= "bg_color:#DEDEDE\nselected_bg_color:#A9C3D9\nbase_color:#FFF"    # Background, base
-gtk_color_scheme	= "fg_color:#4D4D4D\nselected_fg_color:#FFF\ntext_color:#4D4D4D"    # Foreground, text
-gtk_color_scheme	= "tooltip_bg_color:#000\ntooltip_fg_color:#FFF"                    # Tooltips
-gtk_color_scheme	= "link_color:#08C"                                                 # Hyperlinks
-gtk_color_scheme	= "frame_color:#D1D1D1\ninactive_frame_color:#D1D1D1"               # Fix for Chrome
-gtk_color_scheme	= "bg_color_dark:#383838\ntext_color_dark:#FFF"                     # Dark colors
-
+gtk-color-scheme = "base_color:#fcfcfc\nbg_color:#CECECE\ntooltip_bg_color:#000000\nselected_bg_color:#9db6cd\ntext_color:#000000\nfg_color:#3c3c3c\ntooltip_fg_color:#FFFFFF\nselected_fg_color:#F5F5F5\nlink_color:#DD4814\nbg_color_dark:#686868\nfg_color_dark:#fcfcfc"
 gtk-auto-mnemonics = 1
+
