--- a/wallpapers/DESCRIPTION
+++ b/wallpapers/DESCRIPTION
@@ -19,4 +19,7 @@ Filename	Author								Resolution
 1.5.png		Barbu, Leonard (Leo) <lemonade at lavabit dot com>		4:3
 1.5wide.png	Barbu, Leonard (Leo) <lemonade at lavabit dot com>		16:10
 1.5wide2.png	Barbu, Leonard (Leo) <lemonade at lavabit dot com>		16:9
+1.6.png		Chevaux, Antoine (centuri0) <achevaux at gmail dot com>		4:3
+1.6wide.png	Chevaux, Antoine (centuri0) <achevaux at gmail dot com>		16:10
+1.6wide2.png	Chevaux, Antoine (centuri0) <achevaux at gmail dot com>		16:9
 
