* initial import of 1.7 wallpaper :)

--- a/wallpapers/DESCRIPTION
+++ b/wallpapers/DESCRIPTION
@@ -22,4 +22,7 @@ Filename	Author								Resolution
 1.6.png		Chevaux, Antoine (centuri0) <achevaux at gmail dot com>		4:3
 1.6wide.png	Chevaux, Antoine (centuri0) <achevaux at gmail dot com>		16:10
 1.6wide2.png	Chevaux, Antoine (centuri0) <achevaux at gmail dot com>		16:9
+1.7.png		PacMiam - http://pac-miam.deviantart.com           		4:3
+1.7wide.png	PacMiam - http://pac-miam.deviantart.com			16:10
+1.7wide2.png	PacMiam - http://pac-miam.deviantart.com			16:9
 
