* Add new logos in repo

--- a/logo/DESCRIPTION
+++ b/logo/DESCRIPTION
@@ -11,3 +11,8 @@ Version made by thiteum for Faenza Icon theme, actually used as default icon men
 FrugalWare.svg
 
 Modified version by Kooda
+
+BlueLogo.svg, DarkLogo.svg and WhiteLogo.svg
+
+Based on AwOken (start-here-frugalware)
+Modified version by PacMiam
