* Add the new wallpaper to repo

--- a/wallpapers/DESCRIPTION
+++ b/wallpapers/DESCRIPTION
@@ -25,4 +25,7 @@ Filename	Author								Resolution
 1.7.png		PacMiam - http://pac-miam.deviantart.com           		4:3
 1.7wide.png	PacMiam - http://pac-miam.deviantart.com			16:10
 1.7wide2.png	PacMiam - http://pac-miam.deviantart.com			16:9
+2.0.png		PacMiam - http://pac-miam.deviantart.com           		4:3
+2.0wide.png	PacMiam - http://pac-miam.deviantart.com			16:10
+2.0wide2.png	PacMiam - http://pac-miam.deviantart.com			16:9
 
